# Cold-Mail-Generator

./: README.md  demo.py  pyproject.toml
app/: langchain_helper.py  main.py  portfolio.py
app/vectorstore/: chroma.sqlite3
vectorstore/: chroma.sqlite3
